# ff2gether

./: .env.example  .gitignore  MASTER_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_phase1.py
docs/: api_keys_guide.md  setup_guide.md
infrastructure/monitoring/: prometheus.yml
scripts/: init_db.sql
src/config/: risk_params.yaml  settings.py
src/database/: connection.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 20260114_2200_initial_schema.py
src/monitoring/: logger.py
