[project]
name = "polymarket-arbitrage-bot"
version = "0.1.0"
description = "Educational trading bot exploiting temporal inefficiencies between crypto spot markets and Polymarket"
authors = [{name = "FF2gether Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async & Web
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "redis>=5.0.1",

    # API Clients
    "ccxt>=4.2.0",
    "py-clob-client>=0.25.0",
    "web3>=6.15.0",

    # Data Processing
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",

    # Technical Analysis
    "ta-lib>=0.4.28",
    "pandas-ta>=0.3.14b",

    # Monitoring & Logging
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",

    # Code Quality
    "black>=24.1.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.3",

    # Development Tools
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
